# drunk-black-jack

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
src/: CMakeLists.txt  cards.cpp  cards.h  main.cpp
src/ai/: ai.cpp  ai.h
src/card/: CMakeLists.txt  card.h  cards_type.h
src/core/deck_handler/: deck_handler.cpp
src/deck/: CMakeLists.txt  deck.cpp  deck.h
src/engine/: CMakeLists.txt  engine.cpp  engine.h  engine_types.h
src/generator/: generator.cpp  generator.h
src/hand/: hand.cpp  hand.h
